--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "eslint": "^9.39.2",
+    "rimraf": "^6.1.2",
     "typescript": "^5.9.3"
   },
   "repository": {
