package.json: flag package as public

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dist"
   ],
   "publishConfig": {
+    "access": "public",
     "exports": {
       "./utils": {
         "import": "./dist/utils/index.js",
